<resources>
    <string name="app_name">FlightFinder</string>
    <string name="button_run">Run workflow</string>
    <string name="button_clean">Clean results</string>
    <string name="action_settings">Settings</string>
    <string name="originLabel">Origin</string>
    <string name="destinationLabel">Destination</string>
    <string name="departureDateLabel">Departure date</string>
    <string name="returnDateLable">Return date</string>
    <string name="get_low_fare">Start Forecast Fare</string>
    <string name="setDateButtonLabel">Set Date</string>
</resources>